<resources>
    <string name="app_name">PopularMovies1</string>
    <string name="api_error">Movie data not found</string>
    <string name="movie_title_label">Title</string>
    <string name="movie_overview_label">Overview</string>
    <string name="movie_rating_label">Rating</string>
    <string name="movie_date_label">Release Date</string>
    <string name="action_popular">Most Popular</string>
    <string name="action_toprated">Top Rated</string>
    <string name="action_favorites">Favorites</string>
    <string name="default_text">No Internet Connection. Check your network settings and try again.</string>
    <string name="details_movie_image">Movie Image</string>
    <string name="movie_thumbnail">Movie Thumbnail</string>
    <string name="fav">Set as Favorite</string>
    <string name="unfav">Remove as Favorite</string>
    <string name="show_trailers">See Trailer</string>
    <string name="show_reviews">Read Review</string>
</resources>
