<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDetails">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/movie_image_iv"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                tools:src="@mipmap/ic_launcher"
                android:contentDescription="@string/details_movie_image" />

        <TextView
                style="@style/TextValueTheme"
                android:id="@+id/title_tv"
                android:textColor="@color/colorLabel"
                android:layout_toRightOf="@id/movie_image_iv" />

        <TextView
                style="@style/TextValueTheme"
                android:id="@+id/plot_tv"
                android:textColor="@color/colorLabel"
                android:layout_below="@id/rem_fav_btn" />

        <TextView
                style="@style/TextValueTheme"
                android:id="@+id/rating_tv"
                android:textColor="@color/colorLabel"
                android:layout_below="@id/title_tv"
                android:layout_toRightOf="@id/movie_image_iv" />

        <TextView
                style="@style/TextValueTheme"
                android:id="@+id/date_tv"
                android:textColor="@color/colorLabel"
                android:layout_toRightOf="@id/movie_image_iv"
                android:layout_below="@id/rating_tv" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fav_btn"
                android:text="@string/fav"
                android:layout_below="@id/date_tv"
                android:layout_toRightOf="@id/movie_image_iv"
                android:padding="8dp"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rem_fav_btn"
                android:text="@string/unfav"
                android:layout_below="@id/fav_btn"
                android:layout_toRightOf="@id/movie_image_iv"
                android:padding="8dp"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_btn"
                android:text="@string/show_trailers"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/plot_tv"
                android:padding="8dp"
                android:layout_margin="8dp"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/review_btn"
                android:text="@string/show_reviews"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/play_btn"
                android:padding="8dp"
                android:layout_margin="8dp"
                />

    </RelativeLayout>

</ScrollView>